[metadata]
name = aoc_2020
description = Lyons Advent of Code 2020 Library
author = Alexander Lyons
license = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers = 
  Programing Language :: Python :: 3
  Programing Language :: Python :: 3 :: Only
  Programing Language :: Python :: 3.8
  Programing Language :: Python :: 3.9
  Programing Language :: Python :: 3.10

[options]
packages = 
  aoc_2020
install_requires = 
  requests>=2
python_requires = >=3.8
package_dir =
  =src
zip_safe = no
  